<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="text_finish">Finish</string>
    <string name="text_start">Start</string>
    <string name="text_loading">Loading</string>
    <string name="action_retry">Retry</string>
    <string name="text_email">Email</string>
    <string name="text_buy_now">Buy Now</string>
    <string name="text_click_to_view">Tap here to <b>View Full Story</b></string>
    <string name="text_click_here_to_view_map">Tap here to <b>View Map</b></string>
    <string name="text_click_to_call">Tap here to <b>Call</b></string>
    <string name="text_click_to_compose">Tap here to <b>Compose Mail</b></string>
    <string name="text_click_to_buy">Click here to <b>Buy</b></string>
    <string name="cprep_phone">Timings: <b>Monday</b> to <b>Friday</b> <b><i>9:00 am</i></b> to <b><i>6:00 pm</i></b></string>
    <string name="text_designed_by">Designed &amp; Developed by</string>
    <string name="text_no_application_maps">No application found to handle maps...</string>
    <string name="error_exception">Exception</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_exams_tests">Exams/Tests</string>
    <string name="text_video_classes">Live Classes</string>
    <string name="text_my_courses">My Courses</string>
    <string name="text_mock_test">Our Tests</string>
    <string name="text_mock_test_new">Mock Tests</string>
    <string name="text_live_tests">Live Tests</string>
    <string name="text_free_tests">Free Tests</string>
    <string name="text_notes">Notes</string>
    <string name="text_topic_tests">Topic Tests</string>
    <string name="text_daily_quizzes">Quizzes</string>
    <string name="text_current_affairs">Current Affairs</string>
    <string name="text_newspaper">News paper</string>
    <string name="text_latest_jobs">Job Alert</string>
    <string name="text_institute_updates">Institute Updates</string>
    <string name="text_videos">Free Classes</string>
    <string name="text_help">Help</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_telegram">Telegram</string>
    <string name="text_youtube">Youtube</string>
    <string name="text_downloads">Downloads</string>
    <string name="text_question_of_the_day">Word of the day</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_getting_started">Getting Started</string>
    <string name="text_insights_trends"><![CDATA[Live News Channel]]></string>
    <string name="text_education">Education</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="text_about_us">About Us</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_profile">Profile</string>
    <string name="text_login">Login</string>
    <string name="translate_splash_image">translate_splash_image</string>
    <string name="text_checking_for_updates">Checking for Updates</string>
    <string name="quote_heart_healthy">Nothing makes a person happier than having a happy heart</string>
    <string name="text_username">Username*</string>
    <string name="text_password">Password*</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_forgot_your_password">Forgot your password ? </string>
    <string name="text_reset">Reset </string>
    <string name="text_register">Register</string>
    <string name="text_first_name">Full Name*</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_others">Others</string>
    <string name="text_email_address">Email Address*</string>
    <string name="text_phone_number">Phone Number*</string>
    <string name="text_okay">Okay</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_see_demo_video">See Demo Video</string>
    <string name="text_purchase_package">Purchase Package</string>
    <string name="text_sanket_doctor_review">Sanket Doctor Review</string>
    <string name="text_medical_history">Medical History</string>
    <string name="title_no_internet">No internet connection found</string>
    <string name="err_incorrect_use_pass">Incorrect Username or Password</string>
    <string name="err_incorrect_use_pass_login_again">Incorrect Username or Password. Login Again</string>
    <string name="err_something_went_wrong">Something went wrong. Please try again</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="err_details_first">Please enter the details first</string>
    <string name="err_edit_number">Edit Number</string>
    <string name="text_start_time">Start Time</string>
    <string name="text_end_time">End Time</string>
    <string name="error_enter_valid_email">Please enter a valid email to login</string>
    <string name="error_enter_valid_username">Please enter a valid username to login</string>
    <string name="error_enter_password">Please enter a password</string>
    <string name="success_question_of_day">Yay, you have answered question correctly</string>
    <string name="unattempted_question">You have not attempted this question</string>
    <string name="error_question_of_day">Ohh, you answered it wrongly. Please check below for correct answer.</string>
    <string name="username_required">Username is required in order to login*</string>
    <string name="phone_required">Phone number is required in order to login*</string>
    <string name="email_required">Email is required in case you forgot password*</string>
    <string name="password_required">Password is required in order to login*</string>
    <string name="text_do_want_go_back">Do you want to go back?</string>
    <string name="txt_current_transaction">\"The current transaction will be cancelled and payment will not get processed. \"</string>
    <string name="txt_about_us">"<b>Pariksha Guru</b> Established on 17th oct 2017 Founders and Directors
of PARIKSHA GURU CAREER ACADEMY are Mr. VIKRAM
CHAND , Er. SANJAY GANGWAR, and Mr. DD MAURYA
who have more than 12 year experience of teaching
for various competitive exams. it offers coaching
for entrance examination of various competitive
examinations like SSC, SBI PO, SBI CLERK, SBI
SPECIALIST OFFICER,IBPS PO,IBPS CLERK,RBI GRADE
B OFFICER RBI ASSISTANT, NABARD,SSC (JE), SSC
(STATISTICAL INVESTIGATOR), NDA, CDS, AIRFORCE
X AND Y GROUP, ARMY, RAILWAYS, CAPF(ASSISTANT
COMMANDANT),STATE POLICE OFFICER EXAMS,
UPTET CTET TGT AND PGT EXAMS, FOUNDATION
COURSES, CAMPUS PLACEMENT EXAMS, PARIKSHA
GURU CAREER ACADEMY is a new venture by us to
cater to the demand and expectation of the students
aspiring for competitive exams and focuses to be the
best coaching center in BAREILLY. Apart from just a
coaching centre, PARIKSHA GURU CAREER ACADEMY
also focuses on the all-round development of the
students through expert guidance and unmatched study
materials issued from us. PARIKSHA GURU CAREER
ACADEMY aims to be the best coaching centre in India
with regards to preparations of SSC, SBI, BANK PO AND
CLERK, IBPS SPECIALIST OFFICER, LIC, INSURANCE
EXAMS,AIRFORCE, SSC (JE), SSC CPO,SSC (STATISTICAL
INVESTIGATOR), RAILWAYS, FOUNDATION COURSES,
STATE POLICE OFFICER EXAMS, UPTET ,CTET ,TGT AND
PGT EXAMS etc. PARIKSHA GURU CAREER ACADEMY also
provides the unique facility of Mobile friendly Android
App Test Series to its students so that they can judge
their skills anytime they want.</string>
    <string name="txt_payment_not_processed">Please do not press back button or payment won\'t get processed</string>
    <string name="txt_click_to_go_back">Click here to go back</string>
    <string name="txt_payment_cancelled">Payment Cancelled</string>
    <string name="txt_payment_success">Payment Success, processing your payment</string>
    <string name="text_course_details">Course Details</string>
    <string name="text_course_description">Course Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_previous_classes">Previous Classes</string>
    <string name="text_upcoming_classes">Upcoming Classes</string>
    <string name="text_view_more">View More</string>
    <string name="text_module_wise_analysis">Module-Wise Analysis</string>
    <string name="text_overall_analysis">Overall Analysis</string>
    <string name="text_total_marks">Total Marks</string>
    <string name="text_obtained_marks">Obtained Marks</string>
    <string name="text_module_marks">Module Marks</string>
    <string name="text_unattempted_questions">Unattempted Questions</string>
    <string name="text_wrong_answers">Wrong Answers</string>
    <string name="text_correct_answers">Correct Answers</string>
    <string name="text_question_wise_analysis">Question-wise Analysis</string>
    <string name="text_refund_Policy">
    \nTest package :- \n
\nCancellation and Refunds \n


\nTo be eligible for a refund, the student must raise a refund request within 48 hours of purchase of any test package. A 100% refund ( excluding GST and gateway charges ) will be paid to the candidate if he has not attempted more than 1 paper test. No refund will be done after 48 hours.



\n \nOnline Live Classes refund Policy :- \n
\nOnce you have made a purchase of Any course via payment gateway, you have 2 calendar days to cancel the purchase. To be eligible for a cancellation and refund of service, You need to send an email composed in English regarding cancellation of request on support@coprepedu.com. Once we receive your cancellation request, we will inspect it and send an acknowledgment in 24 hours. Once your usage of services is verified (whether it is within the limits quoted above), you will get notified in written. If your cancellation is approved, a refund will be initiated to your banking account (credit card or original method of payment) for which you will receive a notification. The refund shall be credited to your banking account within the stipulated time (days) as per your bank’s policies.



\n\nDuplicate Payment Refund :-
\nAll the payment done twice by the candidate will be refunded to them within a particular refund time line on their original bank account. After being verified by the institute.


</string>
</resources>