<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_xxhuge"
                android:text="@string/text_login"
                android:textSize="@dimen/font_large"
                android:textStyle="bold"
                android:transitionName="@string/text_login" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewLogo"
                android:layout_below="@id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/spacing_large"
                android:src="@drawable/icon_square">

            </androidx.appcompat.widget.AppCompatImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutUsername"
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewLogo"
                android:hint="@string/text_username"
                app:boxCornerRadiusBottomEnd="@dimen/spacing_xxhuge"
                app:boxCornerRadiusBottomStart="@dimen/spacing_xxhuge"
                app:boxCornerRadiusTopEnd="@dimen/spacing_xxhuge"
                app:boxCornerRadiusTopStart="@dimen/spacing_xxhuge"
                app:hintTextAppearance="@style/AppThemeEditTextHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/selector_name"
                    android:drawablePadding="@dimen/spacing_normal"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="@dimen/spacing_normal"
                    android:paddingEnd="@dimen/spacing_normal"
                    android:singleLine="true"
                    android:textColor="@color/md_grey_500" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewLogo"
                android:layout_marginTop="@dimen/spacing_small"
                android:hint="@string/text_phone_number"
                app:boxCornerRadiusBottomEnd="@dimen/spacing_xxhuge"
                app:boxCornerRadiusBottomStart="@dimen/spacing_xxhuge"
                app:boxCornerRadiusTopEnd="@dimen/spacing_xxhuge"
                app:boxCornerRadiusTopStart="@dimen/spacing_xxhuge"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:helperText="Enter the registered phone number without +91"
                app:hintTextAppearance="@style/AppThemeEditTextHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/selector_user_phone"
                    android:drawablePadding="@dimen/spacing_normal"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingStart="@dimen/spacing_normal"
                    android:paddingEnd="@dimen/spacing_normal"
                    android:textColor="@color/md_grey_500" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textLayoutPhone"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/text_password"
                app:boxCornerRadiusBottomEnd="@dimen/spacing_xxhuge"
                app:boxCornerRadiusBottomStart="@dimen/spacing_xxhuge"
                app:boxCornerRadiusTopEnd="@dimen/spacing_xxhuge"
                app:boxCornerRadiusTopStart="@dimen/spacing_xxhuge"
                app:counterEnabled="false"
                app:counterMaxLength="36"
                app:helperTextEnabled="true"
                app:hintTextAppearance="@style/AppThemeEditTextHint"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/selector_user_password"
                    android:drawablePadding="@dimen/spacing_normal"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/spacing_normal"
                    android:paddingEnd="@dimen/spacing_normal"
                    android:textColor="@color/md_grey_500" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textLayoutPassword"
                android:layout_marginTop="@dimen/spacing_xhuge"
                android:background="@drawable/drawable_cornered_bg_purple"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:hapticFeedbackEnabled="true"
                android:text="@string/text_submit"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/font_large" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonLogin"
                android:layout_centerHorizontal="true">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="@dimen/spacing_mini"
                    android:paddingEnd="@dimen/spacing_mini"
                    android:text="@string/text_forgot_your_password"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/font_small"
                    android:transitionName="@string/text_login"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonReset"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/spacing_mini"
                    android:layout_toEndOf="@id/textViewForgot"
                    android:text="@string/text_forgot_your_password"
                    android:textSize="@dimen/font_small"
                    android:textStyle="bold|italic"
                    android:transitionName="@string/text_login" />

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>